--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
@@ -8,8 +8,8 @@
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/cipherNestedScroll"
-        android:layout_width="368dp"
-        android:layout_height="207dp"
+        android:layout_width="373dp"
+        android:layout_height="295dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -27,7 +27,7 @@
             <FrameLayout
                 android:id="@+id/cipherTextContainer"
                 android:layout_width="match_parent"
-                android:layout_height="207dp"
+                android:layout_height="289dp"
                 android:background="@color/black_overlay"
                 tools:layout_editor_absoluteX="3dp"
                 tools:layout_editor_absoluteY="0dp">
@@ -88,229 +88,51 @@
 
     </FrameLayout>
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/toolNestedScroll"
-        android:layout_width="368dp"
-        android:layout_height="280dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:fillViewport="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cipherNestedScroll">
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-            <FrameLayout
-                android:id="@+id/BottomFrame"
+            <Button
+                android:id="@+id/button_subPopup"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="44dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                tools:layout_editor_absoluteX="0dp">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Substitute Character" />
 
-                <android.support.v4.widget.NestedScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fillViewport="true">
+            <Button
+                android:id="@+id/button_shiftPopup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Caesar Shift" />
 
-                    <LinearLayout
-                        android:id="@+id/ButtonLayout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
+            <Button
+                android:id="@+id/button_rTranspo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Rectangular Transpo" />
 
-                        <LinearLayout
-                            android:id="@+id/layout_substitution"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
+            <Button
+                android:id="@+id/button_cTranspo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Columnar Transpo" />
 
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="40dp"
-                                android:orientation="horizontal">
+            <Button
+                android:id="@+id/button_graphPopup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="graph" />
 
-                                <Spinner
-                                    android:id="@+id/spinner_charA"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1" />
-
-                                <ImageView
-                                    android:id="@+id/imageView2"
-                                    android:layout_width="277dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    app:srcCompat="@drawable/ic_menu_send" />
-
-                                <Spinner
-                                    android:id="@+id/spinner_charB"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1" />
-                            </LinearLayout>
-
-                            <Button
-                                android:id="@+id/button_charSubstitution"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="Substitute by char" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:id="@+id/layout_caesarLayout"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/seekBar_indicator"
-                                android:layout_width="match_parent"
-                                android:layout_height="31dp"
-                                android:layout_weight="1" />
-
-                            <SeekBar
-                                android:id="@+id/seekBar_caesar"
-                                android:layout_width="match_parent"
-                                android:layout_height="28dp"
-                                android:layout_weight="1" />
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:orientation="horizontal">
-
-                                <Button
-                                    android:id="@+id/button_caesarShiftL"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:text="SL" />
-
-                                <Button
-                                    android:id="@+id/button_caesarShiftR"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:text="SR" />
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:id="@+id/layout_TranspoLayout"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <Button
-                                android:id="@+id/button_cTranspo"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="Columnar Transpo" />
-
-                            <Button
-                                android:id="@+id/button_rTranspo"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="Rectangular Transpo" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:id="@+id/ICLayout"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-
-                            <FrameLayout
-                                android:id="@+id/frameLayout_graph"
-                                android:layout_width="match_parent"
-                                android:layout_height="167dp"
-                                android:layout_weight="1">
-
-                                <!--CODE FOR GRAPHVIEW-->
-
-                                <com.jjoe64.graphview.GraphView
-                                    android:id="@+id/graph_lot"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content">
-
-
-                                </com.jjoe64.graphview.GraphView>
-
-                                <!--END OF GRAPHVIEW-->
-
-                            </FrameLayout>
-
-                            <FrameLayout
-                                android:id="@+id/layout_period"
-                                android:layout_width="match_parent"
-                                android:layout_height="52dp"
-                                android:layout_weight="1">
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:orientation="vertical">
-
-                                    <TextView
-                                        android:id="@+id/period_indicator"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content" />
-
-                                    <SeekBar
-                                        android:id="@+id/seekBar_period"
-                                        style="@style/Widget.AppCompat.SeekBar.Discrete"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:max="10"
-                                        android:progress="3" />
-                                </LinearLayout>
-
-                            </FrameLayout>
-
-                            <android.support.constraint.ConstraintLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1">
-
-                                <TextView
-                                    android:id="@+id/cipherICFreqView"
-                                    android:layout_width="159dp"
-                                    android:layout_height="365dp"
-                                    android:layout_marginEnd="8dp"
-                                    android:layout_marginTop="8dp"
-                                    android:layout_weight="1"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent" />
-
-                                <TextView
-                                    android:id="@+id/cipherICTextView"
-                                    android:layout_width="186dp"
-                                    android:layout_height="373dp"
-                                    android:layout_marginStart="8dp"
-                                    android:layout_marginTop="8dp"
-                                    android:layout_weight="1"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent" />
-                            </android.support.constraint.ConstraintLayout>
-
-                        </LinearLayout>
-                    </LinearLayout>
-                </android.support.v4.widget.NestedScrollView>
-            </FrameLayout>
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+    </HorizontalScrollView>
 
 </LinearLayout>
