--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_card.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_card.xml
@@ -11,11 +11,11 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card"
         android:layout_width="0dp"
-        android:layout_height="226dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
 
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginStart="2dp"
 
         app:cardBackgroundColor="@color/cardview_light_background"
         app:cardUseCompatPadding="true"
