--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/detail_list_view.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/detail_list_view.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="15dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/detail_list_card_view"
@@ -21,7 +22,8 @@
             <TextView
                 android:id="@+id/detail_name"
 
-                android:elevation="8dp"
+                android:background="@color/colorAccent"
+                android:textColor="#ffffff"
 
                 android:layout_width="259dp"
                 android:layout_height="43dp"
