--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_ngram.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_ngram.xml
@@ -22,29 +22,23 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/frequency_letter_upper_card_view"
-                android:backgroundTint="@color/charcoalLight"
                 android:layout_width="match_parent"
-                android:layout_height="206dp"
-                android:layout_weight="1">
+                android:layout_height="248dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/charcoalLight">
 
-                <FrameLayout
-                    android:id="@+id/graph_freq_layout"
+                <com.jjoe64.graphview.GraphView
+                    android:id="@+id/graph_freq_lot"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    tools:layout_editor_absoluteX="8dp"
+                    tools:layout_editor_absoluteY="85dp" />
 
-                    <com.jjoe64.graphview.GraphView
-                        android:id="@+id/graph_freq_lot"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        tools:layout_editor_absoluteX="8dp"
-                        tools:layout_editor_absoluteY="85dp" />
-                </FrameLayout>
             </android.support.v7.widget.CardView>
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/dummy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
