--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_calculate_ic.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_calculate_ic.xml
@@ -51,6 +51,27 @@
                         android:textAlignment="center"
                         android:textColor="@color/dark_primaryTextColor" />
 
+                    <TextView
+                        android:background="@color/colorAccent"
+                        android:layout_width="fill_parent"
+                        android:layout_height="2dp"
+                        android:paddingBottom="2dp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
+                        android:paddingTop="2dp"
+                        android:scaleType="fitXY"
+                        android:src="@android:drawable/divider_horizontal_dark" />
+
+                    <TextView
+                        android:id="@+id/analysis_inverse_key_value"
+                        android:layout_width="match_parent"
+                        android:layout_height="41dp"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="[KEY INVERSE]"
+                        android:textAlignment="center"
+                        android:textColor="@color/dark_primaryTextColor"/>
+
                     <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="65dp"
