--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_calculate_ic.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_calculate_ic.xml
@@ -70,7 +70,8 @@
                         android:gravity="center_vertical"
                         android:text="[KEY INVERSE]"
                         android:textAlignment="center"
-                        android:textColor="@color/dark_primaryTextColor"/>
+                        android:textColor="@color/dark_primaryTextColor"
+                        android:visibility="gone" />
 
                     <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
